fixed spacing of components

--- a/src/components/HourlyWeather/HourlyWeather.css
+++ b/src/components/HourlyWeather/HourlyWeather.css
@@ -1,9 +1,9 @@
 .hourly-card {
     padding: 10px;
     background-color: white;
-    margin-right: 20px;
+    margin: 20px;
     float: left;
-    width: 202px;
+    width: 180px;
     height: 210px;
     border-radius: 20px;
     border-style: solid;
