--- a/src/components/WaterLevel/WaterLevel.css
+++ b/src/components/WaterLevel/WaterLevel.css
@@ -1,5 +1,5 @@
 .water-level {
-    padding: 20px;
+    padding-top: 30px;
     background-color: white;
     height: 400px;
     border-radius: 20px;
